# step2point

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  configs.py  mkdocs.yml  pyproject.toml
.github/workflows/: algorithms.yml  ci.yml  docs.yml  regression.yml
cpp/: CMakeLists.txt
cpp/bindings/: pybind_module.cpp
cpp/include/step2point/: algorithms.hpp  shower.hpp
cpp/src/: identity.cpp  merge_within_cell.cpp  shower.cpp
cpp/tests/: test_merge_within_cell.cpp
docs/: algorithms.md  architecture.md  cpp_future.md  getting_started.md  getting_started_edm4hep.md  index.md  validation.md
examples/: generate_validation_plots.py  inspect_showers.py  plot_detector_cells.py  render_shower_display.py  render_shower_display_comparison.py  render_shower_display_triptych.py  run_hdbscan.py  run_step2point_pipeline.py
martina_test/: compare_h5_files.py  connect_to_ngt.sh  convert_from_cc3_format.py  convert_to_DDML_format.py  convert_to_cc3_format.py  cut_onMC_root.py  metadata.py  minimal_root_reader.py  plot_check_cc3_format.py  plot_check_layercounts_test.py  plotting_h5.py  plotting_h5_root.py  submit_job.sh  submit_job_new.sh  sweep_hdbscan.py
scripts/: setup_key4hep_venv.sh
src/step2point/: __init__.py  cpp_backend.py
tests/data/: CLD_gamma_10GeV_posY2150mm_dirY1_10ev_sim_detailed_tchandler.h5  CLD_pionM_10GeV_posY2150mm_dirY1_10ev_sim_detailed_tchandler.h5  ODD_gamma_10ev_theta90deg_phi0deg_posX0mmY1250mmZ0mm_10GeV.h5  ODD_gamma_10ev_theta90deg_phi0deg_posX0mmY1250mmZ0mm_10GeV_cluster_within_cell_reference.h5  ODD_gamma_10ev_theta90deg_phi0deg_posX0mmY1250mmZ0mm_10GeV_edm4hep.root  ODD_gamma_10ev_theta90deg_phi0deg_posX0mmY1250mmZ0mm_10GeV_hdbscan_clustering_reference.h5  ODD_gamma_10ev_theta90deg_phi0deg_posX0mmY1250mmZ0mm_10GeV_hdbscan_reference.h5  ODD_gamma_10ev_theta90deg_phi0deg_posX0mmY1250mmZ0mm_10GeV_merge_within_cell_reference.h5  ODD_gamma_10ev_theta90deg_phi0deg_posX0mmY1250mmZ0mm_10GeV_merge_within_regular_subcell_3x3_center_reference.h5  ODD_gamma_10ev_theta90deg_phi0deg_posX0mmY1250mmZ0mm_10GeV_merge_within_regular_subcell_3x3_weighted_reference.h5  ODD_gamma_10ev_theta90deg_phi0deg_posX0mmY1250mmZ0mm_10GeV_merge_within_regular_subcell_reference.h5  ODD_gamma_10ev_theta90deg_phi90deg_posX0mmY1250mmZ0mm_100GeV_merge_within_regular_subcell_5x5_weighted_debug.h5  ODD_pionM_10ev_theta90deg_phi0deg_posX0mmY1250mmZ0mm_10GeV.h5  ODD_pionM_10ev_theta90deg_phi0deg_posX0mmY1250mmZ0mm_10GeV_edm4hep.root  README.md  tiny_showers.h5
tests/integration/: algorithm_regression_helpers.py  test_algorithm_cluster_within_cell_agglomerative_strict_regression.py  test_algorithm_cluster_within_cell_regression.py  test_algorithm_cluster_within_cell_strict_regression.py  test_algorithm_hdbscan_loose_regression.py  test_algorithm_hdbscan_regression.py  test_algorithm_hdbscan_strict_regression.py  test_algorithm_identity_regression.py  test_algorithm_identity_strict_regression.py  test_pipeline_tiny.py  (+11 more)
to_cc3_format/: convert_to_cc3_format.py  sweep_hdbscan.py
(+60 files in other folders)
