[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "step2point"
version = "0.1.0"
description = "Physics-aware calorimeter shower compression library"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "OpenAI scaffold"}]
dependencies = [
  "numpy>=1.24",
  "h5py>=3.9",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "pymdown-extensions>=10.0",
]
root = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "root: tests that require podio/edm4hep ROOT input",
]

[tool.ruff]
line-length = 130

[tool.ruff.lint]
select = ["E", "F", "I"]
