[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "step2point"
version = "0.1.0"
description = "Physics-aware calorimeter shower compression library"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "OpenAI scaffold"}]
dependencies = [
  "numpy>=1.24",
  "h5py>=3.9",
  "matplotlib>=3.8",
  "scikit-learn>=1.3",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "scikit-learn==1.8.0",
]
dev = [
  "ruff>=0.6",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "pymdown-extensions>=10.0",
]
root = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "root: tests that require podio/edm4hep ROOT input",
  "odd_geometry: tests that require an OpenDataDetector checkout",
  "strict_regression: exact reference regression tests",
  "loose_regression: range- and invariant-based regression tests for nondeterministic algorithms",
]

[tool.ruff]
line-length = 130

[tool.ruff.lint]
select = ["E", "F", "I"]
